--- a/front_end/package.json
+++ b/front_end/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "imask": "^7.4.0",
+    "v-mask": "^2.3.0",
+    "vue": "^3.2.13",
+    "vue-imask": "^7.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
